--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "biome check",
     "format": "biome format --write",
-    "postinstall": "lefthook install"
+    "postinstall": "lefthook install; lucidlines init",
+    "lucidlines": "lucidlines"
   },
   "dependencies": {
     "next": "16.0.1",
@@ -23,6 +24,7 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "lefthook": "^2.0.2",
+    "lucidlines": "^1.1.18",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
