--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "biome check",
     "format": "biome format --write",
     "lucid": "lucidlines",
+    "auth:generate": "npx @better-auth/cli@latest generate --output ./src/lib/db/schemas/auth.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "postinstall": "lefthook install"
