feat: setup ORPC framework with scalable contract-based architecture
Following the previous commit that temporarily disabled the Register component,
this commit establishes a complete ORPC (OpenRPC) setup for type-safe API procedures:

## ORPC Infrastructure Setup:
- Install ORPC packages: @orpc/server, @orpc/contract, @orpc/zod, @orpc/standard-server-node
- Create scalable contract-based architecture with separate files per feature
- Implement contract-first development pattern using oRPC's implement() function

## Contract Definitions (src/lib/orpc/contracts/):
- hello.ts: Hello world procedure with optional name parameter
- math.ts: Math operations (add, multiply) with number inputs/outputs

## Router Implementations (src/lib/orpc/routers/):
- hello.ts: Hello procedure implementation with timestamp
- math.ts: Math operations with proper error handling

## API Integration:
- Next.js App Router setup at /app/rpc/[[...rest]]/route.ts
- RPCHandler configuration with CORS plugin and error handling
- Support for all HTTP methods (GET, POST, PUT, PATCH, DELETE, HEAD)

## Client Components:
- ORPC test component (src/components/orpc-test.tsx) for testing procedures
- Type-safe client integration with proper error handling

## Architecture Benefits:
- Type-safe API procedures with full TypeScript inference
- Scalable structure: easy to add new contracts/routers
- Contract-first development ensures API consistency
- Runtime validation with Zod schemas
- Clean separation of concerns between contracts, routers, and API handlers

## Testing Ready:
- Hello procedure available as GET request for easy testing
- Math procedures available via POST with full type safety
- Comprehensive error handling and logging

This establishes ORPC as the foundation for all future API procedures in the application.

--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "postinstall": "lefthook install"
   },
   "dependencies": {
+    "@orpc/client": "^1.10.2",
+    "@orpc/contract": "^1.10.2",
+    "@orpc/server": "^1.10.2",
+    "@orpc/standard-server-node": "^1.10.2",
+    "@orpc/zod": "^1.10.2",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-use-controllable-state": "^1.2.2",
@@ -22,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.44.7",
+    "fetch": "link:@orpc/client/fetch",
     "lucide-react": "^0.548.0",
     "motion": "^12.23.24",
     "next": "16.0.1",
@@ -30,6 +36,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
