--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "@orpc/client": "^1.10.2",
     "@orpc/contract": "^1.10.2",
+    "@orpc/openapi": "^1.10.2",
+    "@orpc/openapi-client": "^1.10.2",
     "@orpc/server": "^1.10.2",
     "@orpc/standard-server-node": "^1.10.2",
     "@orpc/zod": "^1.10.2",
