ci: add pnpm-lock.yaml to workflow trigger paths

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,7 @@ on:
       - 'public/**'
       - 'next.config.ts'
       - 'package.json'
+      - 'pnpm-lock.yaml'
       - 'pnpm-workspace.yaml'
       - 'tsconfig.json'
   workflow_dispatch:
