--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "auth:generate": "npx @better-auth/cli@latest generate --output ./src/lib/db/schemas/auth.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "postinstall": "lefthook install"
+    "prepare": "husky"
   },
   "dependencies": {
     "@orpc/client": "^1.10.2",
@@ -50,10 +50,16 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "drizzle-kit": "^0.31.6",
-    "lefthook": "^2.0.2",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "lucidlines": "^1.2.20",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{js,ts,cjs,mjs,d.cts,d.mts,jsx,tsx,json,jsonc}": [
+      "biome check --write --no-errors-on-unmatched --files-ignore-unknown=true"
+    ]
   }
 }
