--- a/.github/workflows/db.yml
+++ b/.github/workflows/db.yml
@@ -2,7 +2,7 @@ name: Ping Supabase via Drizzle API Endpoint
 
 on:
   schedule:
-    - cron: '0 0 * * 0,3' # Runs every Sunday and Wednesday at midnight UTC
+    - cron: '0 0 * * *' # Runs every day at midnight UTC
   workflow_dispatch:
 
 jobs:
